# tenex

./: .hgignore  Cargo.toml  readme  readme.org  rustfmt.toml
.cargo/: config.toml
aws/: Cargo.toml
gitlab/: Cargo.toml
google/: Cargo.toml  templates.py
google/common/: Cargo.toml
google/common/src/: error.rs  http.rs  lib.rs  multipart.rs
google/src/: drive.rs  lib.rs
google/src/drive/: drive_v3_types.rs
google/src/youtube/: youtube_v3_types.rs
src/: client.rs  email.rs  lib.rs  tests.rs
src/client/: asciinema.rs  discord.rs  google.rs  ipapi.rs  nws.rs  openai.rs
