[package]
name = "tenex"
version = "0.1.0"
edition = "2021"
authors = ["ellis"]
description = "a network client library"
documentation = "https://docs.rwest.io/tenex"
repository = "https://hg.rwest.io/tenex"
readme = "META"
license-file = "COPYING"
publish = ["crater"]

[workspace]
members = ["google", "aws"]
[features]
default = []
full = ["ipapi", "nws", "email", "openai", "discord", "google", "aws"]
ipapi = []
nws = []
email = ["lettre"]
openai = ["jwt"]
discord = ["serenity"]

[dependencies]
# internal
google = { version = "0.1.0", path = "google", optional = true }
aws = { version = "0.1.0", path = "aws", optional = true }
# rlib
rlib = { version = "0.1.0", path = "../rlib", features = ["net", "obj", "anyhow", "logger", "tls"] }
# contrib
tokio = "1.13"
serde_json = "1.0.66"
serde = { version = "1.0.127", features = ["derive"] }
ron = "0.6.4"
chrono = { version = "0.4.19", features = ["serde"] }
lettre = { version = "0.10.0-rc.3", features = ["smtp-transport", "tokio1", "tokio1-rustls-tls", "builder"], optional = true }
jwt = { version = "0.15.0", optional = true }
oauth2 = { version = "4.1.0", optional = true }
# octocrab = { version = "0.12", optional = true }
serenity = { version = "0.10.9", optional = true }
